ADD & FIX: all handlers and swagger
